--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="src/main.js"></script>
+    <!-- <script type="module" src="src/main.ts"></script> -->
   </body>
 </html>
